backend/grammar.txt
expression            :    KEYWORD:VAR IDENTIFIER EQUALS expression
                      :    comp-expression ((KEYWORD:AND|KEYWORD:OR) comp-expression)*

comp-expression       :    Not comp-expression
                      :    arith-expression ((EQ|LTH|GTH|LTHE|GTHE) arith-expression)*
                  
arith-expression      :    term ((PLUS|MINUS) term)*

term                  :    factor ((MUL|DIV) factor)*

factor                :    (PLUS|MINUS) factor
                      :    power

power                 :    atom (POW factor)*

atom                  :    INT|FLOAT|STRING|IDENTIFIER
                      :    LPAREN expression RPAREN
                      :    if-expression
                      :    for-expression
                      :    while-expression
                      :    list-expression  

if-expression         :    KEYWORD: IF expression KEYWORD:THEN expression
                           (KEYWORD:ELIF expression KEYWORD:THEN expression)*
                           (KEYWORD:ELSE expression)?

for-expression        :    KEYWORD:FOR IDENTIFIER EQUALS expression KEYWORD:TO expression
                           (KEYWORD:STEP expression)? KEYWORD:THEN expression

for-expression        :    KEYWORD:WHILE expression KEYWORD:THEN expression

list-expression       :    LSQUARE (expression (COMMA expression)*)? RSQUARE
